get mygroups retornando paginação